ui: overlap in subject pills & long email fix (#902)
* Fixes overlap in subject pills
* Fixes display issues when user email is very long
* closes inveniosoftware/invenio-rdm-records#296
* closes #834

--- a/invenio_app_rdm/theme/assets/semantic-ui/less/invenio_app_rdm/landing_page.less
+++ b/invenio_app_rdm/theme/assets/semantic-ui/less/invenio_app_rdm/landing_page.less
@@ -47,6 +47,11 @@
      padding: 3.5px;
  }
 
+ .label-aligned {
+     margin-top: 0.5rem;
+     display: inline-block;
+ }
+
  .stats-box {
      padding: 1rem 0rem 0rem 0rem;
 
